Updated page TechDraw CosmeticVertex/de

--- a/wiki/de/TechDraw_CosmeticVertex.html
+++ b/wiki/de/TechDraw_CosmeticVertex.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticVertex/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticVertex&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_CosmeticVertex.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticVertex (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Sommet cosm&eacute;tique (69% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Vertice cosmetico (69% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Wstaw wierzcho&#322;ek kosmetyczny (69% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wierzcho&#322;ek kosmetyczny (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074;&#1089;&#1087;&#1086;&#1084;&#1086;&#1075;&#1072;&#1090;&#1077;&#1083;&#1100;&#1085;&#1091;&#1102; &#1074;&#1077;&#1088;&#1096;&#1080;&#1085;&#1091;" (38% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#51216; (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">FormatierteBeschriftung</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">AllesAnzeigen</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Mittenpunkte</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -151,35 +149,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151708
+Cached time: 20260111202220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.123 seconds
-Preprocessor visited node count: 343/1000000
-Post&#8208;expand include size: 28572/2097152 bytes
-Template argument size: 11347/2097152 bytes
+CPU time usage: 0.074 seconds
+Real time usage: 0.130 seconds
+Preprocessor visited node count: 342/1000000
+Post&#8208;expand include size: 28476/2097152 bytes
+Template argument size: 11283/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4001/5000000 bytes
+Unstrip post&#8208;expand size: 4008/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.849      1 -total
- 32.22%    8.651      1 Template:TechDraw_Tools_navi/de
- 20.00%    5.371      2 Template:Navigation_menu_2
- 16.25%    4.364      2 Template:Docnav/de
- 10.08%    2.706      1 Template:GuiCommand/de
-  8.69%    2.332      1 Template:Userdocnavi/de
-  8.61%    2.311      1 Template:Code
-  8.43%    2.263      1 Template:Caption
-  6.99%    1.878      4 Template:Button
-  5.20%    1.396      1 Template:MenuCommand
+100.00%   33.359      1 -total
+ 23.39%    7.801      1 Template:TechDraw_Tools_navi/de
+ 14.26%    4.756      1 Template:Code
+ 13.41%    4.472      1 Template:MenuCommand
+ 12.49%    4.166      1 Template:GuiCommand/de
+ 11.36%    3.788      2 Template:Docnav/de
+  9.85%    3.287      2 Template:Navigation_menu_2
+  8.95%    2.986      1 Template:Caption
+  6.49%    2.166      1 Template:Userdocnavi/de
+  6.48%    2.163      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111151708 and revision id 1734645. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202219 and revision id 1736033. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
