--- a/wiki/de/TechDraw_CosmeticVertex.html
+++ b/wiki/de/TechDraw_CosmeticVertex.html
@@ -105,14 +105,12 @@
 </pre></div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_RichTextAnnotation.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_RichTextAnnotation.html" title="TechDraw RichTextAnnotation/de">FormatierteBeschriftung</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_ShowAll.html" title="TechDraw ShowAll/de">AllesAnzeigen</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Mittenpunkte</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -149,15 +147,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202220
+Cached time: 20260111202232
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.130 seconds
-Preprocessor visited node count: 342/1000000
-Post&#8208;expand include size: 28476/2097152 bytes
-Template argument size: 11283/2097152 bytes
+CPU time usage: 0.071 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 341/1000000
+Post&#8208;expand include size: 28380/2097152 bytes
+Template argument size: 11219/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -165,19 +163,19 @@ Unstrip post&#8208;expand size: 4008/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.359      1 -total
- 23.39%    7.801      1 Template:TechDraw_Tools_navi/de
- 14.26%    4.756      1 Template:Code
- 13.41%    4.472      1 Template:MenuCommand
- 12.49%    4.166      1 Template:GuiCommand/de
- 11.36%    3.788      2 Template:Docnav/de
-  9.85%    3.287      2 Template:Navigation_menu_2
-  8.95%    2.986      1 Template:Caption
-  6.49%    2.166      1 Template:Userdocnavi/de
-  6.48%    2.163      4 Template:Button
+100.00%   23.516      1 -total
+ 24.62%    5.790      1 Template:TechDraw_Tools_navi/de
+ 14.76%    3.472      2 Template:Docnav/de
+ 13.76%    3.236      1 Template:GuiCommand/de
+ 13.37%    3.143      2 Template:Navigation_menu_2
+ 12.32%    2.897      1 Template:Userdocnavi/de
+  9.26%    2.178      4 Template:Button
+  8.53%    2.006      1 Template:MenuCommand
+  7.01%    1.648      1 Template:Caption
+  6.40%    1.506      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202219 and revision id 1736033. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202231 and revision id 1736035. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
