--- a/wiki/de/TechDraw_CosmeticVertex.html
+++ b/wiki/de/TechDraw_CosmeticVertex.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; Hilfspunkt hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; Hilfspunkt
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -147,15 +145,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202232
+Cached time: 20260111202302
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 341/1000000
-Post&#8208;expand include size: 28380/2097152 bytes
-Template argument size: 11219/2097152 bytes
+CPU time usage: 0.087 seconds
+Real time usage: 0.122 seconds
+Preprocessor visited node count: 340/1000000
+Post&#8208;expand include size: 28356/2097152 bytes
+Template argument size: 11195/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -163,19 +161,19 @@ Unstrip post&#8208;expand size: 4008/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.516      1 -total
- 24.62%    5.790      1 Template:TechDraw_Tools_navi/de
- 14.76%    3.472      2 Template:Docnav/de
- 13.76%    3.236      1 Template:GuiCommand/de
- 13.37%    3.143      2 Template:Navigation_menu_2
- 12.32%    2.897      1 Template:Userdocnavi/de
-  9.26%    2.178      4 Template:Button
-  8.53%    2.006      1 Template:MenuCommand
-  7.01%    1.648      1 Template:Caption
-  6.40%    1.506      1 Template:Code
+100.00%   25.692      1 -total
+ 34.31%    8.814      1 Template:TechDraw_Tools_navi/de
+ 17.87%    4.591      2 Template:Navigation_menu_2
+ 11.88%    3.053      1 Template:GuiCommand/de
+ 11.26%    2.894      2 Template:Docnav/de
+  9.92%    2.550      1 Template:Code
+  7.66%    1.969      1 Template:Userdocnavi/de
+  7.54%    1.936      1 Template:Caption
+  7.06%    1.813      1 Template:MenuCommand
+  5.78%    1.486      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202231 and revision id 1736035. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202302 and revision id 1736037. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
