--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -269,10 +269,8 @@
 <p><span id="Maya-Gesture_navigation"></span>
 </p>
 <h3><span id="Navigace_pomoc.C3.AD_Maya-gest"></span><span class="mw-headline" id="Navigace_pomoc&iacute;_Maya-gest">Navigace pomoc&iacute; Maya-gest</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>In Maya-Gesture Navigation, panning, zooming, and rotating the view require the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> key together with a mouse button; therefore, a three-button mouse is required. It's also possible to use gestures as this style was developed over the <a href="#Gesture_navigation">Gesture navigation</a> style.
+<p>V navigaci Maya-Gesture je pro posouv&aacute;n&iacute;, p&#345;ibli&#382;ov&aacute;n&iacute; a ot&aacute;&#269;en&iacute; pohledu nutn&eacute; pou&#382;&iacute;t kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> spole&#269;n&#283; s tla&#269;&iacute;tkem my&scaron;i; proto je nutn&aacute; my&scaron; se t&#345;emi tla&#269;&iacute;tky. Je tak&eacute; mo&#382;n&eacute; pou&#382;&iacute;vat gesta, proto&#382;e tento styl byl vyvinut na z&aacute;klad&#283; stylu <a href="#Gesture_navigation">Navigace gesty</a>.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>In Maya-Gesture Navigation, all view movements are activated pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ALT</span> and a mouse button, so that it will be needed to have a 3 button mouse in order to correctly use this navigation mode. Alternately it's possible to use gestures as this mode was been developed over the normal Gesture Navigation mode.
 </p>
@@ -1112,13 +1110,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202117
+Cached time: 20260111202313
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.307 seconds
-Real time usage: 0.786 seconds
-Preprocessor visited node count: 1623/1000000
+CPU time usage: 0.322 seconds
+Real time usage: 0.455 seconds
+Preprocessor visited node count: 1622/1000000
 Post&#8208;expand include size: 77841/2097152 bytes
 Template argument size: 28542/2097152 bytes
 Highest expansion depth: 7/100
@@ -1128,19 +1126,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  125.891      1 -total
- 12.63%   15.900      8 Template:ASCII
-  7.61%    9.586      1 Template:Userdocnavi/cs
-  6.89%    8.669      2 Template:OpenInventor_Navigation
-  5.49%    6.911      1 Template:OpenCascade_Navigation
-  5.22%    6.574     75 Template:KEY
-  4.97%    6.257      1 Template:SiemensNX_Navigation
-  4.56%    5.739      1 Template:OpenSCAD_Navigation
-  4.53%    5.698      1 Template:Revit_Navigation
-  4.44%    5.586      1 Template:Inventor_Navigation/cs
+100.00%   76.590      1 -total
+ 11.45%    8.768      1 Template:Userdocnavi/cs
+ 10.82%    8.289      8 Template:ASCII
+  6.51%    4.988      1 Template:Touchpad_Navigation
+  6.51%    4.986      1 Template:OpenSCAD_Navigation
+  6.41%    4.907      1 Template:SolidWorks_Navigation
+  5.69%    4.361      1 Template:Touchpad_Navigation/cs
+  5.11%    3.911     75 Template:KEY
+  4.10%    3.139      1 Template:Inventor_Navigation/cs
+  4.03%    3.083      1 Template:SiemensNX_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202116 and revision id 1736031. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202312 and revision id 1736039. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
