--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -271,21 +271,19 @@
 <h3><span id="Navigace_pomoc.C3.AD_Maya-gest"></span><span class="mw-headline" id="Navigace_pomoc&iacute;_Maya-gest">Navigace pomoc&iacute; Maya-gest</span></h3>
 <p>V navigaci Maya-Gesture je pro posouv&aacute;n&iacute;, p&#345;ibli&#382;ov&aacute;n&iacute; a ot&aacute;&#269;en&iacute; pohledu nutn&eacute; pou&#382;&iacute;t kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> spole&#269;n&#283; s tla&#269;&iacute;tkem my&scaron;i; proto je nutn&aacute; my&scaron; se t&#345;emi tla&#269;&iacute;tky. Je tak&eacute; mo&#382;n&eacute; pou&#382;&iacute;vat gesta, proto&#382;e tento styl byl vyvinut na z&aacute;klad&#283; stylu <a href="#Gesture_navigation">Navigace gesty</a>.
 </p>
-<div class="mw-translate-fuzzy">
-<p>In Maya-Gesture Navigation, all view movements are activated pressing <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ALT</span> and a mouse button, so that it will be needed to have a 3 button mouse in order to correctly use this navigation mode. Alternately it's possible to use gestures as this mode was been developed over the normal Gesture Navigation mode.
-</p>
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:18%; background: #ededff; padding:2px 2px;">Select
+<th style="width:18%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th colspan="2" style="width:28%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th style="width:18%; background: #ededff; padding:2px 2px;">Rotate view
+<th style="width:18%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th style="width:18%; background: #ededff; padding:2px 2px;">Pan
+<th style="width:18%; background: #ededff; padding:2px 2px;">Posun pohledu
 </th>
-<th style="width:18%; background: #ededff; padding:2px 2px;">{{{Tilt_view_name}}}
-</th></tr>
+<th style="width:18%; background: #ededff; padding:2px 2px;">Naklon&#283;n&iacute; pohledu
+<div lang="en" dir="ltr" class="mw-content-ltr">
+</div></th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -302,40 +300,29 @@
 </td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
-<td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</td></tr>
+<td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
+</div></td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</div></td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</div></td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
+
+<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</div></td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Press the left mouse button over an object you want to select.
-</td>
-<td colspan="2">Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the right mouse button, then move the pointer.
-<p>Alternatively, use the mouse wheel to zoom in and out.
-</p>
-</td>
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the left mouse button, then move the pointer.
-</td>
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the middle mouse button, then move the pointer.
-</td>
-<td>{{{Tilt_view_text}}}
-</td></tr></tbody></table>
-</div>
+
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Alt=<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Select_text=Press the left mouse button over an object you want to select.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Zoom_text=Use the mouse wheel to zoom in and out.
-</p>
-</div>
+</div></td>
+<td colspan="2">Use the mouse wheel to zoom in and out.
+
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the right mouse button, then move the pointer.
 </p>
@@ -345,18 +332,18 @@
 </p>
 </div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Rotate_view_text=Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the left mouse button, then move the pointer.
-</p>
-</div>
+</div></td>
+<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the left mouse button, then move the pointer.
+
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Pan_text=Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the middle mouse button, then move the pointer.
-</p>
-</div>
+</div></td>
+<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the middle mouse button, then move the pointer.
+
 <div lang="en" dir="ltr" class="mw-content-ltr">
-<p>|Tilt_view_text=Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and both left and right mouse buttons, and then move the pointer sideways.
-}}
-</p>
-</div>
+</div></td>
+<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and both left and right mouse buttons, and then move the pointer sideways.
+</td></tr></tbody></table>
+
 <p><span id="OpenCascade_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="OpenCascade_navigace">OpenCascade navigace</span></h3>
@@ -1110,15 +1097,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202313
+Cached time: 20260111202430
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.322 seconds
-Real time usage: 0.455 seconds
-Preprocessor visited node count: 1622/1000000
-Post&#8208;expand include size: 77841/2097152 bytes
-Template argument size: 28542/2097152 bytes
+CPU time usage: 0.302 seconds
+Real time usage: 0.384 seconds
+Preprocessor visited node count: 1589/1000000
+Post&#8208;expand include size: 77772/2097152 bytes
+Template argument size: 30003/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1126,19 +1113,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.590      1 -total
- 11.45%    8.768      1 Template:Userdocnavi/cs
- 10.82%    8.289      8 Template:ASCII
-  6.51%    4.988      1 Template:Touchpad_Navigation
-  6.51%    4.986      1 Template:OpenSCAD_Navigation
-  6.41%    4.907      1 Template:SolidWorks_Navigation
-  5.69%    4.361      1 Template:Touchpad_Navigation/cs
-  5.11%    3.911     75 Template:KEY
-  4.10%    3.139      1 Template:Inventor_Navigation/cs
-  4.03%    3.083      1 Template:SiemensNX_Navigation
+100.00%   67.002      1 -total
+ 11.55%    7.737      8 Template:ASCII
+  8.47%    5.676      1 Template:Userdocnavi/cs
+  6.40%    4.291      1 Template:OpenSCAD_Navigation
+  5.52%    3.700     70 Template:KEY
+  5.40%    3.621      1 Template:Blender_Navigation
+  4.85%    3.249      1 Template:CAD_Navigation
+  4.67%    3.128      1 Template:MayaGesture_Navigation
+  4.25%    2.846      1 Template:OpenCascade_Navigation
+  4.16%    2.788      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202312 and revision id 1736039. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202430 and revision id 1736041. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
