Updated page TechDraw CosmeticVertex/de

--- a/wiki/de/TechDraw_CosmeticVertex.html
+++ b/wiki/de/TechDraw_CosmeticVertex.html
@@ -55,7 +55,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Werkzeug <b>TechDraw Hilfspunkt</b> f&uuml;gt einer Ansicht einen Hilfspunkt (<a href="../de/Glossary.html#Vertex" title="Glossary/de">Knoten</a>) hinzu, der nicht Teil der Quellgeometrie ist. Dieser Hilfspunkt verh&auml;lt sich wie jeder andere Knoten und kann f&uuml;r die Bema&szlig;ung verwendet werden.
+<p>Das Werkzeug <b>TechDraw Hilfspunkt</b> f&uuml;gt einer Ansicht einen Hilfspunkt (<a href="../de/Glossary.html#V" title="Glossary/de">Knoten</a>) hinzu, der nicht Teil der Quellgeometrie ist. Dieser Hilfspunkt verh&auml;lt sich wie jeder andere Knoten und kann f&uuml;r die Bema&szlig;ung verwendet werden.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex_Sample.png&amp;filetimestamp=20190521120425&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex_Sample.png" decoding="async" width="300" height="317" class="mw-file-element" data-file-width="351" data-file-height="371"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Hilfspunkte, verwendet, um ein sonst unm&ouml;gliches Ma&szlig; einzutragen</p>
@@ -145,12 +145,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202302
+Cached time: 20260111202447
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.122 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.249 seconds
 Preprocessor visited node count: 340/1000000
 Post&#8208;expand include size: 28356/2097152 bytes
 Template argument size: 11195/2097152 bytes
@@ -161,19 +161,19 @@ Unstrip post&#8208;expand size: 4008/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.692      1 -total
- 34.31%    8.814      1 Template:TechDraw_Tools_navi/de
- 17.87%    4.591      2 Template:Navigation_menu_2
- 11.88%    3.053      1 Template:GuiCommand/de
- 11.26%    2.894      2 Template:Docnav/de
-  9.92%    2.550      1 Template:Code
-  7.66%    1.969      1 Template:Userdocnavi/de
-  7.54%    1.936      1 Template:Caption
-  7.06%    1.813      1 Template:MenuCommand
-  5.78%    1.486      4 Template:Button
+100.00%   73.348      1 -total
+ 21.01%   15.413      1 Template:TechDraw_Tools_navi/de
+ 20.99%   15.398      1 Template:GuiCommand/de
+ 17.88%   13.113      1 Template:Code
+ 17.43%   12.781      2 Template:Docnav/de
+ 11.45%    8.400      2 Template:Navigation_menu_2
+  5.93%    4.347      1 Template:Caption
+  5.48%    4.022      1 Template:Userdocnavi/de
+  5.05%    3.703      1 Template:MenuCommand
+  4.00%    2.931      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202302 and revision id 1736037. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177740-0!canonical and timestamp 20260111202446 and revision id 1736043. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
