Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -194,9 +194,7 @@
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Kantenmittelpunkte hinzuf&uuml;gen</a>: F&uuml;gt Hilfspunkte an den Mittenpunkten der ausgew&auml;hlten Kanten hinzu.</li></ul></dd></dl>
 </div>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadrantengrenzpunkte hinzuf&uuml;gen</a>: F&uuml;gt Hilfspunkte an Viertelpunkten ausgew&auml;hlter (kreisf&ouml;rmiger) Kanten hinzu.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadrantengrenzpunkte</a>: F&uuml;gt Hilfspunkte an Viertelpunkten ausgew&auml;hlter (kreisf&ouml;rmiger) Kanten hinzu.</li></ul></dd></dl>
 <p><span id="Miscellaneous"></span>
 </p>
 <h3><span class="mw-headline" id="Sonstiges">Sonstiges</span></h3>
@@ -301,13 +299,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111201243
+Cached time: 20260111202558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.280 seconds
-Real time usage: 0.439 seconds
-Preprocessor visited node count: 875/1000000
+Real time usage: 0.409 seconds
+Preprocessor visited node count: 874/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -317,18 +315,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.351      1 -total
- 32.03%    7.479      1 Template:TechDraw_Tools_navi/de
- 21.32%    4.979      2 Template:Navigation_menu_2
- 14.92%    3.483      5 Template:VersionPlus/de
- 13.86%    3.237      2 Template:Docnav/de
-  9.91%    2.314     25 Template:Version/de
-  7.53%    1.759      1 Template:Userdocnavi/de
-  7.27%    1.697      1 Template:KEY
-  5.00%    1.168      1 Template:TOCright
+100.00%   32.660      1 -total
+ 30.51%    9.965      1 Template:TechDraw_Tools_navi/de
+ 18.65%    6.091      1 Template:KEY
+ 14.81%    4.838      2 Template:Navigation_menu_2
+ 11.94%    3.900      1 Template:Userdocnavi/de
+ 11.19%    3.653     25 Template:Version/de
+ 10.11%    3.301      5 Template:VersionPlus/de
+  7.75%    2.531      2 Template:Docnav/de
+  3.01%    0.982      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111201243 and revision id 1736015. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202558 and revision id 1736045. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
