--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -268,7 +268,7 @@
 </td></tr></tbody></table>
 <p><span id="Maya-Gesture_navigation"></span>
 </p>
-<h3><span id="Navigace_pomoc.C3.AD_Maya-gest"></span><span class="mw-headline" id="Navigace_pomoc&iacute;_Maya-gest">Navigace pomoc&iacute; Maya-gest</span></h3>
+<h3><span id="Navigace_pomoc.C3.AD_Maya-gesture"></span><span class="mw-headline" id="Navigace_pomoc&iacute;_Maya-gesture">Navigace pomoc&iacute; Maya-gesture</span></h3>
 <p>V navigaci Maya-Gesture je pro posouv&aacute;n&iacute;, p&#345;ibli&#382;ov&aacute;n&iacute; a ot&aacute;&#269;en&iacute; pohledu nutn&eacute; pou&#382;&iacute;t kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> spole&#269;n&#283; s tla&#269;&iacute;tkem my&scaron;i; proto je nutn&aacute; my&scaron; se t&#345;emi tla&#269;&iacute;tky. Je tak&eacute; mo&#382;n&eacute; pou&#382;&iacute;vat gesta, proto&#382;e tento styl byl vyvinut na z&aacute;klad&#283; stylu <a href="#Gesture_navigation">Navigace gesty</a>.
 </p>
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
@@ -1097,12 +1097,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202430
+Cached time: 20260111202610
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.302 seconds
-Real time usage: 0.384 seconds
+CPU time usage: 0.289 seconds
+Real time usage: 0.537 seconds
 Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 77772/2097152 bytes
 Template argument size: 30003/2097152 bytes
@@ -1113,19 +1113,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.002      1 -total
- 11.55%    7.737      8 Template:ASCII
-  8.47%    5.676      1 Template:Userdocnavi/cs
-  6.40%    4.291      1 Template:OpenSCAD_Navigation
-  5.52%    3.700     70 Template:KEY
-  5.40%    3.621      1 Template:Blender_Navigation
-  4.85%    3.249      1 Template:CAD_Navigation
-  4.67%    3.128      1 Template:MayaGesture_Navigation
-  4.25%    2.846      1 Template:OpenCascade_Navigation
-  4.16%    2.788      1 Template:Touchpad_Navigation
+100.00%  151.030      1 -total
+ 10.15%   15.336      1 Template:MayaGesture_Navigation
+  8.74%   13.202      1 Template:SolidWorks_Navigation
+  8.56%   12.923      8 Template:ASCII
+  7.72%   11.664      1 Template:OpenSCAD_Navigation
+  7.64%   11.542      1 Template:Userdocnavi/cs
+  6.51%    9.828      1 Template:Gesture_Navigation
+  6.18%    9.328      1 Template:Blender_Navigation
+  4.89%    7.381      1 Template:CAD_Navigation
+  4.81%    7.259      1 Template:OpenCascade_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202430 and revision id 1736041. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202610 and revision id 1736047. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
