--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -282,8 +282,7 @@
 <th style="width:18%; background: #ededff; padding:2px 2px;">Posun pohledu
 </th>
 <th style="width:18%; background: #ededff; padding:2px 2px;">Naklon&#283;n&iacute; pohledu
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -301,19 +300,15 @@
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
 </div></td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td></tr>
 <tr style="vertical-align:top; background:#efefef;">
@@ -1097,15 +1092,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202610
+Cached time: 20260111202631
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.289 seconds
-Real time usage: 0.537 seconds
-Preprocessor visited node count: 1589/1000000
-Post&#8208;expand include size: 77772/2097152 bytes
-Template argument size: 30003/2097152 bytes
+CPU time usage: 0.338 seconds
+Real time usage: 0.409 seconds
+Preprocessor visited node count: 1588/1000000
+Post&#8208;expand include size: 77694/2097152 bytes
+Template argument size: 29925/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1113,19 +1108,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  151.030      1 -total
- 10.15%   15.336      1 Template:MayaGesture_Navigation
-  8.74%   13.202      1 Template:SolidWorks_Navigation
-  8.56%   12.923      8 Template:ASCII
-  7.72%   11.664      1 Template:OpenSCAD_Navigation
-  7.64%   11.542      1 Template:Userdocnavi/cs
-  6.51%    9.828      1 Template:Gesture_Navigation
-  6.18%    9.328      1 Template:Blender_Navigation
-  4.89%    7.381      1 Template:CAD_Navigation
-  4.81%    7.259      1 Template:OpenCascade_Navigation
+100.00%   52.937      1 -total
+ 16.67%    8.827      8 Template:ASCII
+ 10.85%    5.746      1 Template:Userdocnavi/cs
+  5.69%    3.010     70 Template:KEY
+  5.30%    2.807      1 Template:OpenSCAD_Navigation
+  4.87%    2.579      1 Template:CAD_Navigation
+  4.86%    2.574      1 Template:Blender_Navigation
+  4.17%    2.205      1 Template:Navigation_menu_2
+  3.98%    2.107      1 Template:SolidWorks_Navigation
+  3.94%    2.084      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202610 and revision id 1736047. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202631 and revision id 1736049. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
