Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -191,9 +191,7 @@
 </p>
 <h3><span id="Knoten_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Knoten_hinzuf&uuml;gen">Knoten hinzuf&uuml;gen</span></h3>
 <ul><li><span id="TechDraw_CosmeticVertexGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex.svg&amp;filetimestamp=20240919162013&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt</a>: F&uuml;gt einen Punkt hinzu, der nicht Teil der Quellgeometrie ist.</span></li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Kantenmittelpunkte hinzuf&uuml;gen</a>: F&uuml;gt Hilfspunkte an den Mittenpunkten der ausgew&auml;hlten Kanten hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Kantenmittelpunkte</a>: F&uuml;gt Hilfspunkte an den Mittenpunkten der ausgew&auml;hlten Kanten hinzu.</li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadrantengrenzpunkte</a>: F&uuml;gt Hilfspunkte an Viertelpunkten ausgew&auml;hlter (kreisf&ouml;rmiger) Kanten hinzu.</li></ul></dd></dl>
 <p><span id="Miscellaneous"></span>
 </p>
@@ -299,13 +297,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202558
+Cached time: 20260111202646
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.280 seconds
-Real time usage: 0.409 seconds
-Preprocessor visited node count: 874/1000000
+CPU time usage: 0.252 seconds
+Real time usage: 0.429 seconds
+Preprocessor visited node count: 873/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -315,18 +313,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.660      1 -total
- 30.51%    9.965      1 Template:TechDraw_Tools_navi/de
- 18.65%    6.091      1 Template:KEY
- 14.81%    4.838      2 Template:Navigation_menu_2
- 11.94%    3.900      1 Template:Userdocnavi/de
- 11.19%    3.653     25 Template:Version/de
- 10.11%    3.301      5 Template:VersionPlus/de
-  7.75%    2.531      2 Template:Docnav/de
-  3.01%    0.982      1 Template:TOCright
+100.00%   47.778      1 -total
+ 30.52%   14.582      1 Template:TechDraw_Tools_navi/de
+ 17.27%    8.249      5 Template:VersionPlus/de
+ 15.83%    7.564      2 Template:Navigation_menu_2
+ 14.97%    7.153      1 Template:Userdocnavi/de
+  9.02%    4.310      2 Template:Docnav/de
+  8.83%    4.218     25 Template:Version/de
+  5.02%    2.398      1 Template:TOCright
+  2.47%    1.180      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202558 and revision id 1736045. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202646 and revision id 1736051. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
