Created page with "|Select_text=Stiskněte levé tlačítko myši nad objektem, který chcete vybrat."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -299,21 +299,16 @@
 </td>
 <td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
-<td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
-</div></td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td>
-<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td></tr>
+<td style="width:14%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_RMB_hold.svg&amp;filetimestamp=20181210194240&amp;.html" class="mw-file-description"><img src="../File/Mouse_RMB_hold.svg" decoding="async" width="75" height="107" class="mw-file-element" data-file-width="75" data-file-height="107"></a></span>
+</td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB_hold.svg&amp;filetimestamp=20181210194025&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td>
+<td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_LMB%2BRMB_hold.svg&amp;filetimestamp=20181210193540&amp;.html" class="mw-file-description"><img src="../File/Mouse_LMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Use the mouse wheel to zoom in and out.
@@ -1092,15 +1087,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202631
+Cached time: 20260111202657
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.338 seconds
-Real time usage: 0.409 seconds
-Preprocessor visited node count: 1588/1000000
-Post&#8208;expand include size: 77694/2097152 bytes
-Template argument size: 29925/2097152 bytes
+CPU time usage: 0.305 seconds
+Real time usage: 0.437 seconds
+Preprocessor visited node count: 1584/1000000
+Post&#8208;expand include size: 77494/2097152 bytes
+Template argument size: 29725/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1108,19 +1103,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.937      1 -total
- 16.67%    8.827      8 Template:ASCII
- 10.85%    5.746      1 Template:Userdocnavi/cs
-  5.69%    3.010     70 Template:KEY
-  5.30%    2.807      1 Template:OpenSCAD_Navigation
-  4.87%    2.579      1 Template:CAD_Navigation
-  4.86%    2.574      1 Template:Blender_Navigation
-  4.17%    2.205      1 Template:Navigation_menu_2
-  3.98%    2.107      1 Template:SolidWorks_Navigation
-  3.94%    2.084      2 Template:Docnav
+100.00%  122.774      1 -total
+ 10.20%   12.525      2 Template:OpenInventor_Navigation
+  9.14%   11.226      1 Template:Userdocnavi/cs
+  8.36%   10.263      8 Template:ASCII
+  7.68%    9.428      1 Template:Inventor_Navigation/cs
+  6.38%    7.829      1 Template:OpenSCAD_Navigation
+  5.37%    6.596      1 Template:MayaGesture_Navigation
+  5.37%    6.595      1 Template:SolidWorks_Navigation
+  5.15%    6.324      1 Template:Revit_Navigation
+  5.08%    6.235      1 Template:OpenCascade_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202631 and revision id 1736049. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202656 and revision id 1736054. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
