Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -192,7 +192,7 @@
 <h3><span id="Knoten_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Knoten_hinzuf&uuml;gen">Knoten hinzuf&uuml;gen</span></h3>
 <ul><li><span id="TechDraw_CosmeticVertexGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticVertex.svg&amp;filetimestamp=20240919162013&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticVertex.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt</a>: F&uuml;gt einen Punkt hinzu, der nicht Teil der Quellgeometrie ist.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Midpoints.html" title="TechDraw Midpoints/de">Kantenmittelpunkte</a>: F&uuml;gt Hilfspunkte an den Mittenpunkten der ausgew&auml;hlten Kanten hinzu.</li></ul>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadrantengrenzpunkte</a>: F&uuml;gt Hilfspunkte an Viertelpunkten ausgew&auml;hlter (kreisf&ouml;rmiger) Kanten hinzu.</li></ul></dd></dl>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_Quadrants.svg&amp;filetimestamp=20240710133049&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadrantengrenzpunkte</a>: F&uuml;gt Hilfspunkte an Viertelpunkten ausgew&auml;hlter (kreisf&ouml;rmiger) Kanten hinzu.</li></ul>
 <p><span id="Miscellaneous"></span>
 </p>
 <h3><span class="mw-headline" id="Sonstiges">Sonstiges</span></h3>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202840
+Cached time: 20260111202909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.274 seconds
-Real time usage: 0.439 seconds
+CPU time usage: 0.283 seconds
+Real time usage: 0.408 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.444      1 -total
- 32.16%    7.539      1 Template:TechDraw_Tools_navi/de
- 16.44%    3.854      2 Template:Navigation_menu_2
- 14.82%    3.474      5 Template:VersionPlus/de
- 13.87%    3.251      2 Template:Docnav/de
- 11.36%    2.662     25 Template:Version/de
-  6.34%    1.486      1 Template:TOCright
-  6.11%    1.432      1 Template:Userdocnavi/de
-  5.29%    1.241      1 Template:KEY
+100.00%   22.389      1 -total
+ 29.62%    6.632      1 Template:TechDraw_Tools_navi/de
+ 16.90%    3.784      2 Template:Docnav/de
+ 14.75%    3.302      2 Template:Navigation_menu_2
+ 12.93%    2.894     25 Template:Version/de
+  9.20%    2.060      1 Template:Userdocnavi/de
+  9.09%    2.035      5 Template:VersionPlus/de
+  7.69%    1.722      1 Template:TOCright
+  4.63%    1.036      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202839 and revision id 1736065. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111202909 and revision id 1736069. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
