Created page with "|Pan_text=Podržte klávesu {{KEY|Alt}} a prostřední tlačítko myši a poté přesuňte ukazatel."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -316,10 +316,8 @@
 </p>
 </td>
 <td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> a lev&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and the middle mouse button, then move the pointer.
-
+</td>
+<td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Alt</span> and both left and right mouse buttons, and then move the pointer sideways.
@@ -1078,15 +1076,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111202916
+Cached time: 20260111202950
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.300 seconds
-Real time usage: 0.466 seconds
-Preprocessor visited node count: 1580/1000000
-Post&#8208;expand include size: 77359/2097152 bytes
-Template argument size: 29590/2097152 bytes
+Real time usage: 0.405 seconds
+Preprocessor visited node count: 1579/1000000
+Post&#8208;expand include size: 77324/2097152 bytes
+Template argument size: 29555/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1094,19 +1092,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   78.492      1 -total
- 13.11%   10.287      8 Template:ASCII
- 10.07%    7.904      1 Template:Userdocnavi/cs
-  6.09%    4.780      1 Template:OpenSCAD_Navigation
-  6.05%    4.745      1 Template:SolidWorks_Navigation
-  5.78%    4.533      1 Template:SiemensNX_Navigation
-  4.68%    3.671      1 Template:Blender_Navigation
-  4.53%    3.557      1 Template:Gesture_Navigation
-  4.23%    3.321      1 Template:MayaGesture_Navigation
-  4.16%    3.266      1 Template:Navigation_menu_2
+100.00%   60.097      1 -total
+ 13.86%    8.331      8 Template:ASCII
+  8.10%    4.869      1 Template:Userdocnavi/cs
+  6.43%    3.866      2 Template:OpenInventor_Navigation
+  6.04%    3.627      1 Template:OpenSCAD_Navigation
+  5.58%    3.354      1 Template:Gesture_Navigation
+  4.98%    2.993     70 Template:KEY
+  4.70%    2.822      1 Template:Blender_Navigation
+  4.04%    2.428      1 Template:SolidWorks_Navigation
+  3.94%    2.369      1 Template:Revit_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202915 and revision id 1736071. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111202950 and revision id 1736073. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
